<resources>
    <string name="app_name">HealthAI</string>
    <string name="healthai">HealthAI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="healthai_form">HealthAI Form</string>
    <string name="record_insurance_details">Record Insurance details</string>
    <string name="personal_details">Personal Details</string>
    <string name="full_name">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="insurance_details">Insurance Details</string>
    <string name="fitness">Fitness</string>
    <string name="age">Age</string>
    <string name="weight_in_kg">Weight (in kg)</string>
    <string name="height_in_cm">Height (in cm)</string>
    <string name="calculate">Calculate</string>
    <string name="sex_m_f">Sex (M/F)</string>
    <string name="intro_GP_string">HealthAI employs many GPs from around the world to provide you with all the medical Guidance you need</string>
    <string name="assign_GP_string">Please assign yourself a gp</string>
    <string name="find_gp">Find GP</string>
    <string name="gp">GP</string>
    <string name="sex_ofGp">Preferred sex of the GP</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search">Search</string>
    <string name="gp_list">List of the gp to choose from</string>
    <string name="general_practitioner">General Practitioner</string>
    <string name="call_your_gp">Call your GP</string>
    <string name="please_enter_your_insurance_details">Please enter your Insurance details</string>
    <string name="insurance_company">Insurance Company</string>
    <string name="insurance_year">Insurance Year</string>
    <string name="policy_number">Policy Number</string>
    <string name="type_of_insurance">Type of Insurance</string>
    <string name="subscriber_id">Subscriber ID</string>
    <string name="group_number">Group Number</string>
    <string name="insurance_phone">Insurance Phone</string>
    <string name="save">Save</string>
    <string name="go_back_to_the_previous_screen">Go back to the previous screen</string>
    <string name="risk_level">Your risk level is</string>
    <string name="predicting">Predicting...</string>

    <string-array name="race_array">
        <item>White</item>
        <item>Black</item>
        <item>American Indian/Alaskan Native</item>
        <item>Asian</item>
        <item>Hispanic</item>
        <item>Other</item>
    </string-array>
</resources>