<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GP.gp_details_activity1">

    <TextView
        android:id="@+id/GP_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/acme"
        android:text="@string/general_practitioner"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/intro_gp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GP_heading"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/sex_ofGp"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/sex_rdg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro_gp"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/male_rdb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/Female_rdb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <Button
        android:id="@+id/searchGP_btn"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_below="@+id/sex_rdg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/search"
        android:textSize="20sp" />

</RelativeLayout>