<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/acme"
        android:text="@string/fitness"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/age_editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/textView"
        android:hint="@string/age" />

    <EditText
        android:id="@+id/sex_editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/age_editText"
        android:hint="@string/sex_m_f" />

    <EditText
        android:id="@+id/weight_editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/sex_editText"
        android:hint="@string/weight_in_kg" />

    <EditText
        android:id="@+id/height_editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/weight_editText"
        android:hint="@string/height_in_cm" />

    <TextView
        android:id="@+id/error_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/height_editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:textColor="@color/red"
        android:textSize="14sp" />

    <Button
        android:id="@+id/calcBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/error_textView"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/calculate" />

    <GridLayout
        android:id="@+id/dash_gridlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/calcBtn"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:columnCount="3"
        android:rowCount="4">

        <!-- BMI CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="9dp"
            android:id="@+id/bmi">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BMI"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/bmi_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- BMR CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="9dp"
            android:id="@+id/bmr">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="BMR"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/bmr_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Body Water CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="9dp"
            android:id="@+id/bodyWater">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Body Water"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/bodyWater_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Body Fat CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="9dp"
            android:id="@+id/bodyFat">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Body Fat"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/bodyFat_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Metabolic Age CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="9dp"
            android:id="@+id/metabolicAge">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Metabolic Age"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/metAge_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Muscle Mass CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="9dp"
            android:id="@+id/muscleMass">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Muscle Mass"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/musMass_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>


</RelativeLayout>